# intro-flask

./: .gitignore  pyproject.toml
intro_flask/: app.py
intro_flask/static/: style.css
intro_flask/templates/: base_layout.html  contact.html  division.html  index.html  multiplicacion.html  resta.html  suma.html
tests/: test_intro_flask.py
