[tool.poetry]
name = "intro_flask"
version = "0.1.0"
description = ""
authors = ["owncreed93 <christiantarifer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
